--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "license": "MIT",
   "scripts": {
     "develop": "gatsby develop",
-    "build": "gatsby build",
+    "build": "gatsby build --prefix-paths && gh-pages -d public",
     "serve": "gatsby serve"
   },
   "dependencies": {
     "gatsby": "^1.9.42",
     "gatsby-link": "^1.4.1"
+  },
+  "devDependencies": {
+    "gh-pages": "^1.0.0"
   }
 }
